# zig-text-embeddings-inference

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: build.yml
server/: BUILD.bazel
src/: config.zig  main.zig
src/models/: gte.zig  modernbert.zig
src/routes/: common.zig  embeddings.zig  healthz.zig  hello.zig  helloworld.zig
src/utils/: http.zig  tokenization.zig
