load("@aspect_bazel_lib//lib:tar.bzl", "mtree_spec", "tar")
load("@zml//bazel:zig.bzl", "zig_cc_binary")

zig_cc_binary(
    name = "app",
    srcs = glob(
        ["src/**/*.zig"],
    ),
    args = [
        "--config=$(location @nomic-ai-modernbert-embed-base//:config)",
        "--model=$(location @nomic-ai-modernbert-embed-base//:model.safetensors)",
        "--tokenizer=$(location @nomic-ai-modernbert-embed-base//:tokenizer)",
    ],
    data = [
        "@nomic-ai-modernbert-embed-base//:config",
        "@nomic-ai-modernbert-embed-base//:model.safetensors",
        "@nomic-ai-modernbert-embed-base//:tokenizer",
    ],
    main = "src/main.zig",
    deps = [
        "@com_github_hejsil_clap//:clap",
        "@com_github_zigzap_zap//:zap",
        "@zml//async",
        "@zml//stdx",
        "@zml//zml",
    ],
)

mtree_spec(
    name = "mtree",
    srcs = [":app"],
)

tar(
    name = "archive",
    srcs = [":app"],
    args = [
        "--options",
        "zstd:compression-level=9",
    ],
    compress = "zstd",
    mtree = ":mtree",
)
