load("@aspect_bazel_lib//lib:tar.bzl", "mtree_spec", "tar")
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@zml//bazel:zig.bzl", "zig_cc_binary")

zig_cc_binary(
    name = "app",
    srcs = glob(
        ["src/**/*.zig"],
    ),
    main = "src/main.zig",
    deps = [
        "@com_github_hejsil_clap//:clap",
        "@com_github_zigzap_zap//:zap",
        "@zml//async",
        "@zml//stdx",
        "@zml//zml",
    ],
)

cc_binary(
    name = "modernbert-embed-base",
    args = [
        # "--config=$(location @nomic-ai-modernbert-embed-base//:config)",
        "--model=$(location @nomic-ai-modernbert-embed-base//:model.safetensors)",
        "--tokenizer=$(location @nomic-ai-modernbert-embed-base//:tokenizer)",
    ],
    data = [
        "@nomic-ai-modernbert-embed-base//:config",
        "@nomic-ai-modernbert-embed-base//:model.safetensors",
        "@nomic-ai-modernbert-embed-base//:tokenizer",
    ],
    deps = [":app_lib"],
)

cc_binary(
    name = "ModernBERT-large",
    args = [
        # "--config=$(location @answerdotai-ModernBERT-large//:config)",
        "--model=$(location @answerdotai-ModernBERT-large//:model.safetensors)",
        "--tokenizer=$(location @answerdotai-ModernBERT-large//:tokenizer)",
    ],
    data = [
        "@answerdotai-ModernBERT-large//:config",
        "@answerdotai-ModernBERT-large//:model.safetensors",
        "@answerdotai-ModernBERT-large//:tokenizer",
    ],
    deps = [":app_lib"],
)

mtree_spec(
    name = "mtree",
    srcs = [":app"],
)

tar(
    name = "archive",
    srcs = [":app"],
    args = [
        "--options",
        "zstd:compression-level=9",
    ],
    compress = "zstd",
    mtree = ":mtree",
)

expand_template(
    name = "entrypoint",
    data = [
        ":ModernBERT-large",
        "@answerdotai-ModernBERT-large//:model.safetensors",
        "@answerdotai-ModernBERT-large//:tokenizer",
    ],
    substitutions = {
        ":weights": "$(rlocationpath @answerdotai-ModernBERT-large//:model.safetensors)",
        ":tokenizer": "$(rlocationpath @answerdotai-ModernBERT-large//:tokenizer)",
    },
    tags = [
        "no_ci",
    ],
    template = [
        "./{}/ModernBERT-large".format(package_name()),
        "--weights=./{}/ModernBERT-large.runfiles/:weights".format(package_name()),
        "--tokenizer=./{}/ModernBERT-large.runfiles/:tokenizer".format(package_name()),
    ],
)

oci_image(
    name = "image_",
    base = "@distroless_cc_debian12",
    entrypoint = ":entrypoint",
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    tars = [":archive"],
)

platform_transition_filegroup(
    name = "image",
    srcs = [":image_"],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    target_platform = "@zml//platforms:linux_amd64",
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = [
        "distroless/ztei:latest",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "index.docker.io/vctrmn/ztei",
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)
